# wildland-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CODEOWNERS  Cargo.toml  Makefile.toml  Makefile_common.toml  README.md  app.js  app.mjs  book.toml  bump.sh  deny.toml  docker-compose.yml  index.html  package-lock.json  package.json  release.toml  rust-toolchain  taplo.toml  wasm.sh  webpack.config.js
crates/wildland-admin-manager/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  wildland.i
crates/wildland-admin-manager/docker/: Dockerfile.base  Dockerfile.csharp  Dockerfile.java  Dockerfile.python  Dockerfile.swift  docker-compose.yml
crates/wildland-admin-manager/src/: admin_manager.rs  error.rs  lib.rs
crates/wildland-admin-manager/src/admin_manager/: identity.rs  mod.rs
crates/wildland-admin-manager/src/api/: admin_manager.rs  mod.rs  result.rs  user.rs
crates/wildland-admin-manager/src/ffi/: array.rs  mod.rs
crates/wildland-admin-manager/test/ffi/: test.cpp  test.cs  test.swift
crates/wildland-cargo-lib/: .gitignore  Cargo.toml  README.md  build.rs  expand.rs  swift_header.h  wildland.i
crates/wildland-cargo-lib/src/: cargo_lib.rs  error.rs  lib.rs  test_utils.rs  user.rs  user_config.rs  utils.rs  wasm.rs
crates/wildland-cargo-lib/src/api/: cargo_lib.rs  cargo_user.rs  config.rs  container.rs  foundation_storage.rs  lss.rs  mod.rs  storage.rs  storage_template.rs  user.rs  utils.rs
crates/wildland-cargo-lib/src/errors/: config.rs  container.rs  creation_error.rs  mod.rs  retrieval_error.rs  single_variant.rs  storage.rs  user.rs
crates/wildland-cargo-lib/src/ffi/: mod.rs
crates/wildland-cargo-lib/src/logging/: mod.rs
crates/wildland-cargo-lib/src/templates/: lfs.rs  mod.rs  (+1 more)
crates/wildland-catlib/: Cargo.toml  Makefile.toml  README.md  rust-toolchain
crates/wildland-catlib/src/: bridge.rs  common.rs  container.rs  db.rs  error.rs  forest.rs  lib.rs  storage.rs
crates/wildland-cli/: Cargo.toml
crates/wildland-cli/src/: bridge.rs  cli_args.rs  container.rs  forest.rs  identity.rs  main.rs  storage.rs  version.rs
crates/wildland-corex/: Cargo.toml
crates/wildland-corex/src/: catlib_service.rs  catlib_service2.rs  container.rs  crypto.rs  error.rs  forest.rs  lib.rs  lss.rs  storage.rs  test_utils.rs  user.rs  wallet.rs
crates/wildland-crypto/: Cargo.toml  Makefile.toml  README.md  rust-toolchain
crates/wildland-crypto/src/: common.rs  error.rs  lib.rs  signature.rs  utils.rs
crates/wildland-dfs/: Cargo.toml  README.md
crates/wildland-dfs/src/: close_on_drop_descriptor.rs  encrypted.rs  events.rs  lib.rs  storage_backend.rs  storage_backends.rs  unencrypted.rs
crates/wildland-http-client/: Cargo.toml  README.md  build.rs  wrapper.h
crates/wildland-http-client/src/: cross_platform_http_client.rs  error.rs  lib.rs  response_handler.rs
crates/wildland-lfs/: Cargo.toml  Makefile.toml  README.md
crates/wildland-lfs/src/: lib.rs  template.rs
crates/wildland-local-secure-storage/: Cargo.toml
crates/wildland-local-secure-storage/src/: api.rs  error.rs  file.rs  lib.rs
crates/wildland-storage-controller-client/: Cargo.toml  README.md
crates/wildland-storage-controller-client/src/: client.rs  credentials.rs  error.rs  lib.rs  metrics.rs  response_handler.rs  signature.rs  storage.rs
crates/wildland-wallet/: Cargo.toml
crates/wildland-wallet/src/: lib.rs
macros/ffi-macro/: Cargo.toml
macros/ffi-macro-build/: Cargo.toml  wildland.i
macros/ffi-macro-build/src/: lib.rs
macros/ffi-macro/src/: lib.rs
wildland-admin-manager/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cxx.cc  swift_header.h  wildland.i
wildland-admin-manager-api/: Cargo.toml
wildland-admin-manager-api/src/: admin_manager.rs  error.rs  identity.rs  lib.rs  primitives.rs  seed_phrase.rs
wildland-admin-manager-python/: Cargo.toml  README.md  pyproject.toml
wildland-admin-manager-python/src/: lib.rs
wildland-admin-manager-python/src/wl_ver_printer/: wl_ver_printer.py
wildland-admin-manager/cpp-example/: RAEDME.md  build.sh  main.cpp  run.sh
wildland-admin-manager/docker/: Dockerfile.base  Dockerfile.csharp  Dockerfile.java  Dockerfile.python  Dockerfile.swift  docker-compose.yml
wildland-admin-manager/ffi_example/: example.rs  interface.i  test.cs  test.java  test.py  test.swift
wildland-admin-manager/src/: ffi.rs  lib.rs
wildland-admin-manager/src/admin_manager/: identity.rs  mod.rs  seed_phrase.rs
wildland-admin-manager/src/api/: admin_manager.rs  email_client.rs  identity.rs  mod.rs  result.rs  seed_phrase.rs
wildland-admin-manager/src/ffi/: array.rs  cxx_admin_manager.rs  cxx_identity.rs  cxx_option.rs  cxx_result.rs  email_client.rs  identity.rs  mod.rs  option.rs  rcref.rs  result.rs
wildland-admin-manager/test/ffi/: main.cs  main.java  main.py  main.swift  test.cpp  test.cs  test.java  test.py  test.swift
wildland-catlib/: Cargo.toml  README.md
wildland-catlib/src/: bridge.rs  container.rs  forest.rs  lib.rs  storage.rs
wildland-cli/: Cargo.toml  README.md
wildland-cli-python-bindings/: Cargo.toml  README.md  pyproject.toml
wildland-cli-python-bindings/src/: lib.rs
wildland-cli-python-bindings/src/wl_ver_printer/: wl_ver_printer.py
wildland-cli/src/: cli_args.rs  identity.rs  main.rs  version.rs
wildland-corex/: Cargo.toml
wildland-corex/src/: bridge.rs  catalog.rs  corex.rs  crypto.rs  error.rs  lib.rs
wildland-corex/src/identity/: master.rs  wildland.rs
wildland-crypto/: Cargo.toml  README.md  build.rs  rust-toolchain
wildland-crypto/scripts/: cargo.sh  cargo_build.sh  xcode.sh
wildland-crypto/src/: common.rs  constants.rs  error.rs  lib.rs  signature.rs
wildland-crypto/src/ffi/: mod.rs
wildland-crypto/src/identity/: derivation.rs  error.rs  identity.rs  keys.rs  mod.rs  seed.rs
wildland-wallet/: Cargo.toml
wildland-wallet/src/: lib.rs
wildland-wallet/src/api/: mod.rs
wildland-wallet/src/keys/: sign.rs
wildland-wallet/src/wallet/: file.rs  mod.rs
wildland-wasm/: Cargo.toml  README.md
wildland-wasm/src/: lib.rs
wildland-wasm/test/: index.html  index.js
(+250 files in other folders)
