[workspace]
members = ["crates/*"]


# The following patch resolves the problem with undefined symbol `emscripten_get_now`
# that occures while compiling rust library to `wasm32-unknown-emscripten` target.
[patch.crates-io]
instant = { git = "https://github.com/hoodmane/instant.git", branch = "emscripten-no-leading-underscore" }


[profile.dev.package.aws-sdk-s3] # FIX local count too large error when compiled for wasm
opt-level = 1
