[package]
name = "wildland-admin-manager"
version = "0.4.1"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland Admin Manager"
keywords = ["storage"]
publish = ["wl-dev"]
build = "build.rs"


[lib]
crate-type = ["staticlib", "lib"]


[features]
bindings = ["cxx", "swift-bridge", "cxx-build", "swift-bridge-build"]


[dependencies]
wildland-corex = { version = "0.1.7", path = "../wildland-corex", registry = "wl-dev" }
wildland-admin-manager-api = { version = "0.3.0", path = "../wildland-admin-manager-api", registry = "wl-dev" }
thiserror = "1.0.31"

# Bindings generators:
cxx = { version = "1.0", optional = true }
swift-bridge = { version = "0.1", optional = true }


[package.metadata.workspaces]
independent = true


[build-dependencies]
cxx-build = { version = "1.0", optional = true }
swift-bridge-build = { version = "0.1", optional = true }
