[package]
name = "wildland-admin-manager"
version = "0.5.0"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland Admin Manager"
keywords = ["storage"]
publish = ["wl-dev"]


[features]
bindings = ["cxx", "swift-bridge", "ffi-macro", "ffi-macro-build"]


[lib]
crate-type = ["staticlib", "lib"]


[dependencies]
wildland-corex = { version = "0.1.9", path = "../wildland-corex", registry = "wl-dev" }
ffi-macro = { version = "0.1.0", path = "../macros/ffi-macro", registry = "wl-dev", optional = true }
thiserror = "1.0.31"
cxx = { version = "1.0", optional = true }
swift-bridge = { version = "0.1", optional = true }



[package.metadata.workspaces]
independent = true


[build-dependencies]
ffi-macro-build = { version = "0.1.0", path = "../macros/ffi-macro-build", registry = "wl-dev", optional = true}
