[package]
name = "wildland-corex-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex-cli"
description = "A Wildland command-line interface."
publish = ["wl-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
wildland-corex = { version = "0.1.0", path = "../wildland-corex", registry = "wl-dev" }
wildland-admin-manager = { version = "0.1.0", path = "../wildland-admin-manager", registry = "wl-dev" }
yansi = "0.5.1"
