[package]
name = "wildland-corex"
version = "0.1.4"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland Core library"
keywords = ["storage"]
publish = ["wl-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wildland-wallet = { version = "0.1.0", path = "../wildland-wallet", registry = "wl-dev" }
wildland-catlib = { version = "0.2.0", path = "../wildland-catlib", registry = "wl-dev" }
wildland-dfs = { version = "0.1.0", path = "../wildland-dfs", registry = "wl-dev" }

[package.metadata.workspaces]
independent = true
