[package]
name = "wildland-wallet"
version = "0.1.1"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland keystore library"
keywords = ["storage"]
publish = ["wl-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
