[package]
name = "wildland-wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Wildland WebAssembly bindings"
publish = ["wl-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wildland-admin-manager = { version = "0.1.0", path = "../wildland-admin-manager", registry = "wl-dev" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"