[package]
name = "wildland-admin-manager"
version = "0.6.4"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland Admin Manager"
keywords = ["storage"]
publish = ["wl-dev"]


[features]
bindings = ["swift-bridge", "ffi-macro", "ffi-macro-build"]


[lib]
crate-type = ["staticlib", "lib"]


[dependencies]
wildland-corex = { version = "0.2.0", path = "../wildland-corex", registry = "wl-dev" }
ffi-macro = { version = "0.1.0", registry = "wl-dev", optional = true }
thiserror = "1.0.31"
swift-bridge = { version = "0.1", optional = true }
sha2 = "0.10.2"


[package.metadata.workspaces]
independent = true


[build-dependencies]
ffi-macro-build = { version = "0.1.0", registry = "wl-dev", optional = true }
