
[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Cargo Lib"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-cargo-lib"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.19.0"


[features]
bindings = ["rusty-bind", "rusty-bind-build"]


[lib]
crate-type = ["staticlib", "lib"]


[dependencies]
anyhow               = { version = "1.0" }
base64               = { version = "0.13.0" }
derivative           = { version = "2.2" }
hex                  = { version = "0.4" }
rusty-bind           = { version = "0.2.1", registry = "wl-dev", optional = true }
serde                = { version = "1.0", features = ["derive"] }
serde_json           = { version = "1.0" }
sha2                 = { version = "0.10" }
thiserror            = { version = "1.0" }
tracing              = { version = "0.1" }
tracing-appender     = { version = "0.2" }
tracing-attributes   = { version = "0.1" }
tracing-core         = { version = "0.1" }
tracing-log          = { version = "0.1", features = ["env_logger"] }
tracing-subscriber   = { version = "0.3", features = ["json", "env-filter", "fmt", "std", "registry"] }
uuid                 = { version = "1.2", features = ["serde"] }
wildland-corex       = { version = "0.8.0", path = "../wildland-corex", registry = "wl-dev" }
wildland-http-client = { version = "0.5.0", path = "../wildland-http-client", registry = "wl-dev" }

[package.metadata.workspaces]
independent = true

[build-dependencies]
rusty-bind-build = { version = "0.1.3", registry = "wl-dev", optional = true }

[dev-dependencies]
hex-literal = { version = "0.3.4" }
mockall     = { version = "0.11" }
