[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Cargo Lib"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-cargo-lib"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.30.1-rc.0"

[features]
bindings = ["rusty-bind", "rusty-bind-build"]
default  = ["lfs"]                            # TODO let's turn off lfs by default when we switch to prod env
lfs      = ["wildland-lfs"]

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
anyhow               = { version = "1.0" }
base64               = { version = "0.20" }
derivative           = { version = "2.2" }
hex                  = { version = "0.4" }
log                  = { version = "0.4" }
rusty-bind           = { version = "0.4", registry = "wl-dev", optional = true }
serde                = { version = "1.0", features = ["derive"] }
serde_json           = { version = "1.0" }
sha2                 = { version = "0.10" }
thiserror            = { version = "1.0" }
tracing              = { version = "0.1" }
tracing-appender     = { version = "0.2" }
tracing-attributes   = { version = "0.1" }
tracing-core         = { version = "0.1" }
tracing-log          = { version = "0.1", features = ["env_logger"] }
tracing-subscriber   = { version = "0.3", features = ["json", "env-filter", "fmt", "std", "registry"] }
uuid                 = { version = "1.2", features = ["serde"] }
wildland-catlib      = { version = "0.30.1-rc.0", path = "../wildland-catlib", registry = "wl-dev" }
wildland-corex       = { version = "0.30.1-rc.0", path = "../wildland-corex", registry = "wl-dev" }
wildland-dfs         = { version = "0.30.1-rc.0", path = "../wildland-dfs", registry = "wl-dev" }
wildland-http-client = { version = "0.30.1-rc.0", path = "../wildland-http-client", registry = "wl-dev" }
wildland-lfs         = { version = "*", path = "../wildland-lfs", registry = "wl-dev", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
tracing-oslog = { version = "0.1" }

[build-dependencies]
anyhow           = { version = "1.0" }
rusty-bind-build = { version = "0.2", registry = "wl-dev", optional = true }

[dev-dependencies]
mockall           = { version = "0.11" }
mockito           = { version = "0.31" }
pretty_assertions = { version = "1.3" }
rand              = { version = "0.8" }
rstest            = { version = "0.16" }
serde_yaml        = { version = "0.9" }
tempfile          = { version = "3.3" }
