[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Catalog Library client"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-catlib"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.31.0-rc.1"

[dependencies]
derivative     = { version = "2.2" }
serde_json     = { version = "1.0" }
directories    = { version = "4.0.1" }
hex            = { version = "0.4" }
ron            = { version = "0.8" }
rustbreak      = { version = "2.0", features = ["serde_yaml", "ron_enc", "yaml_enc", "mmap"] }
serde          = { version = "1.0", features = ["derive"] }
serde_yaml     = { version = "0.9" }
tempfile       = { version = "3.3" }
thiserror      = { version = "1.0" }
tracing        = { version = "0.1" }
uuid           = { version = "1.2", features = ["v4", "serde"] }
wildland-corex = { version = "0.31.0-rc.0", path = "../wildland-corex", registry = "wl-dev" }


[dev-dependencies]
rand   = { version = "0.8" }
rstest = { version = "0.16" }
