[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Catalog Library client"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-catlib"
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.40.0"

[dependencies]
derivative     = { version = "2.2" }
directories    = { version = "4.0" }
hex            = { version = "0.4" }
r2d2           = { version = "0.8.10" }
redis          = { version = "0.22.3", features = ["r2d2", "tokio-comp"] }
ron            = { version = "0.8" }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0" }
tempfile       = { version = "3.3" }
thiserror      = { version = "1.0" }
tracing        = { version = "0.1" }
uuid           = { version = "1.2", features = ["v4", "serde"] }
wildland-corex = { version = "0.40.0", path = "../wildland-corex" }


[dev-dependencies]
futures = "0.3.26"
rand   = { version = "0.8" }
rstest = { version = "0.16" }
tokio = { version = "1.25.0", features = ["time", "rt", "rt-multi-thread"] }
