[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Catalog Library client"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-catlib"
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.40.0"

[dependencies]
derivative     = { version = "2.2" }
hex            = { version = "0.4" }
r2d2           = { version = "0.8" }
redis          = { version = "0.22", features = ["r2d2"] }
ron            = { version = "0.8" }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0" }
thiserror      = { version = "1.0" }
tracing        = { version = "0.1" }
uuid           = { version = "1.3", features = ["v4", "serde"] }
wildland-corex = { version = "0.40.0", path = "../wildland-corex" }

[dev-dependencies]
futures = { version = "0.3" }
rand    = { version = "0.8" }
rstest  = { version = "0.16" }
tokio   = { version = "1.25", features = ["rt", "rt-multi-thread"] }
