[package]
name = "wildland-cli"
version = "0.2.6"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland command-line interface (CLI)"
keywords = ["storage", "command-line-utilities"]
publish = ["wl-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
wildland-corex = { version = "0.1.3-alpha.0", path = "../wildland-corex", registry = "wl-dev" }
wildland-admin-manager = { version = "0.5.1", path = "../wildland-admin-manager", registry = "wl-dev" }
yansi = "0.5.1"
anyhow = "1.0.57"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }

[package.metadata.workspaces]
independent = true
