[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Core library"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-corex"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.30.0"

[dependencies]

hex             = { version = "0.4" }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = { version = "1.0" }
sha2            = { version = "0.10" }
thiserror       = { version = "1.0" }
tracing         = { version = "0.1" }
uuid            = { version = "1.2", features = ["v4", "serde"] }
wildland-crypto = { version = "0.30.0", path = "../wildland-crypto", registry = "wl-dev" }
wildland-dfs    = { version = "0.30.0", path = "../wildland-dfs", registry = "wl-dev" }

[dev-dependencies]
mockall  = { version = "0.11" }
tempfile = { version = "3.3" }
