[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Core library"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-corex"
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.40.0"

[dependencies]
derivative      = { version = "2.2" }
hex             = { version = "0.4" }
itertools       = { version = "0.10" }
mockall         = { version = "0.11" }
r2d2 = "0.8.10"
redis = "0.22.3"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = { version = "1.0" }
sha2            = { version = "0.10" }
tera            = { version = "1.17" }
thiserror       = { version = "1.0" }
tracing         = { version = "0.1" }
uuid            = { version = "1.2", features = ["v4", "serde"] }
wildland-crypto = { version = "0.40.0", path = "../wildland-crypto" }

[dev-dependencies]
pretty_assertions = { version = "1.3" }
rstest            = { version = "0.16" }
test-case         = { version = "2.2" }
toml              = { version = "0.7" }
wildland-catlib   = { version = "0.40.0", path = "../wildland-catlib" }
