[package]
name = "wildland-crypto"
version = "0.4.7"
authors = ["Golem Foundation Contributors <contact@golem.foundation>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/wildland/corex/wildland-core"
homepage = "https://wildland.io/"
description = "Wildland Crypto"
keywords = ["crypto"]
publish = ["wl-dev"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = "1.0"
rand_core = { version = "0.6", features = ["std"] }
rand-8 = { package = "rand", version = "0.8.4"}
rand-7 = { package = "rand", version = "0.7.3"}
thiserror = "1.0.31"

# bip39 is used to handle mnemonics
tiny-bip39 = "0.8.2"

# hkdf is used to bridge 64 -> 96 bytes of randomness
# (gap between bip39 output and ed25519-bip32 input)
hkdf = "0.12.0"

# ed25519-dalek-bip32 is used to generate the tree of keypairs used by WL
ed25519-dalek-bip32 = "0.2.0"

# used to derive ed25519 public keys and to generate curve25519 keypairs
ed25519-dalek = "1.0.1"
crypto_box = {version="0.7.2", features=["std"]}

# used to generate nonce
salsa20 = "0.9.0"

sha2 = "0.10.0"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.79" }

[package.metadata.workspaces]
independent = true
