[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "A Wildland file system handler"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-dfs"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.31.1"

[dependencies]
anyhow         = { version = "1.0" }
itertools      = { version = "0.10" }
mockall        = { version = "0.11" }
serde_json     = { version = "1.0" }
tracing        = { version = "0.1" }
uuid           = { version = "1.2" }
wildland-corex = { version = "0.31.1", path = "../wildland-corex", registry = "wl-dev" }

[dev-dependencies]
pretty_assertions = { version = "1.3" }
rsfs              = { version = "0.4" }
rstest            = { version = "0.16" }
