[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "A Wildland file system handler"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage"]
license     = "GPL-3.0-only"
name        = "wildland-dfs"
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.40.0"

[dependencies]
anyhow               = { version = "1.0" }
aws-sdk-s3           = { version = "0.24", default-features = false }
aws-smithy-client    = { version = "0.54" }
aws-smithy-http      = { version = "0.54" }
aws-types            = { version = "0.54" }
derivative           = { version = "2.2" }
http                 = { version = "0.2" }
http-body            = { version = "0.4" }
itertools            = { version = "0.10" }
mockall              = { version = "0.11" }
ring-channel         = { version = "0.11" }
scopeguard           = { version = "1.1" }
serde                = { version = "1.0" }
serde_json           = { version = "1.0" }
thiserror            = { version = "1.0" }
tokio                = { version = "1.25", features = ["rt"] }
tokio-stream         = { version = "0.1" }
tower-service        = { version = "0.3" }
tracing              = { version = "0.1" }
uuid                 = { version = "1.3" }
wildland-corex       = { version = "0.40.0", path = "../wildland-corex" }
wildland-http-client = { version = "0.40.0", path = "../wildland-http-client" }

[dev-dependencies]
pretty_assertions = { version = "1.3" }
rsfs              = { version = "0.4" }
rstest            = { version = "0.16" }
test-case         = { version = "3.0" }
