[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland http client"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["http", "client"]
license     = "GPL-3.0-only"
name        = "wildland-http-client"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.4.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log        = { version = "0.4" }
reqwest    = { version = "0.11", features = ["json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror  = { version = "1.0" }
tracing    = { version = "0.1" }
# currently versioning is not in best shape, thus its bound to patch
wildland-crypto = { version = "0.6.0", path = "../wildland-crypto", registry = "wl-dev" }

[dev-dependencies]
http    = { version = "0.2" }
mockito = { version = "0.31" }
tokio   = { version = "1.17", features = ["macros", "rt-multi-thread"] }

[package.metadata.workspaces]
independent = true
