[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland http client"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["http", "client"]
license     = "GPL-3.0-only"
name        = "wildland-http-client"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.30.0"

[dependencies]
hex             = { version = "0.4" }
http            = { version = "0.2" }
minreq          = { version = "2.6", features = ["json-using-serde"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = { version = "1.0" }
thiserror       = { version = "1.0" }
tracing         = { version = "0.1" }
wildland-crypto = { version = "0.30.0", path = "../wildland-crypto", registry = "wl-dev" }

[dev-dependencies]
http    = { version = "0.2" }
mockito = { version = "0.31" }
