[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland http client"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["http", "client"]
license     = "GPL-3.0-only"
name        = "wildland-http-client"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.31.1"

[dependencies]
hex             = { version = "0.4" }
http            = { version = "0.2" }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = { version = "1.0" }
thiserror       = { version = "1.0" }
tracing         = { version = "0.1" }
url             = { version = "2.3" }
wildland-crypto = { version = "0.31.1", path = "../wildland-crypto", registry = "wl-dev" }

[dev-dependencies]
mockall = { version = "0.11" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
minreq = { version = "2.6", features = ["json-using-serde", "https-rustls"] }

[build-dependencies]
bindgen      = "0.63"
build-target = "0.4"
