[package]
edition = "2021"
name    = "wildland-lfs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = { version = "1.0" }
serde        = { version = "1.0" }
serde_json   = { version = "1.0" }
wildland-dfs = { version = "0.30.1-rc.0", path = "../wildland-dfs", registry = "wl-dev" }

[dev-dependencies]
pretty_assertions = { version = "1.3" }
tempdir           = { version = "0.3" }
