[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland Local Filesystem Backend"
edition     = "2021"
homepage    = "https://wildland.io/"
license     = "GPL-3.0-only"
name        = "wildland-lfs"
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.31.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = { version = "1.0" }
serde        = { version = "1.0" }
serde_json   = { version = "1.0" }
wildland-dfs = { version = "0.31.1", path = "../wildland-dfs" }

[dev-dependencies]
pretty_assertions = { version = "1.3" }
tempdir           = { version = "0.3" }
