[package]
authors     = ["Golem Foundation Contributors <contact@golem.foundation>"]
description = "Wildland keystore library"
edition     = "2021"
homepage    = "https://wildland.io/"
keywords    = ["storage", "keystore"]
license     = "GPL-3.0-only"
name        = "wildland-local-secure-storage"
publish     = ["wl-dev"]
repository  = "https://gitlab.com/wildland/corex/wildland-core"
version     = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbreak = { version = "2.0.0", features = ["yaml_enc"] }
thiserror = { version = "1.0.31" }
tracing   = { version = "0.1" }

[dev-dependencies]
tempfile = { version = "3.3.0" }

[package.metadata.workspaces]
independent = true
